[project]
dependencies = [
    "pydantic >= 1.0",
]
name = "backup_timebox"
version = "0.1.1"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pre-commit >= 2.0",
    "jinja2"
]

[build-system]
requires = [
    "setuptools >= 60.9.3",
    "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 99


[tool.pycln]
all = true

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true