[metadata]
name = backup_timebox
version = 0.1.0
description = Backup manager
author = Mathias Millet <mathias.millet@mailden.eu>
license = GNU General Public License v3.0
readme = README.md
python = ^3.8
homepage = https://github.com/sapristi/timebox
repository = https://github.com/sapristi/timebox
documentation = https://github.com/sapristi/timebox

keywords = ["backup"]

classifiers =
    "Topic :: System :: Archiving :: Backup"

[options]
install_requires =
    pydantic >= 1.0
    blessings >= 1.7
packages = find:
   

[options.entry_points]
console_scripts =
        timebox = timebox:__main__.main


[options.extras_require]
dev = pytest>=7.0; pre-commit>=2.0
storj = uplink-python>=1.2
