[metadata]
name = backup_timebox
version = 0.1.2
description = Backup manager
author = Mathias Millet <mathias.millet@mailden.eu>
license = GNU General Public License v3.0
readme = README.md
python = ^3.7
homepage = https://github.com/sapristi/timebox
repository = https://github.com/sapristi/timebox
documentation = https://github.com/sapristi/timebox

keywords = ["backup"]

classifiers =
    Topic :: System :: Archiving :: Backup
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    pydantic >= 1.0
    blessings >= 1.7
    requests >= 2.13
    typing_extensions
    python-dotenv
    pyyaml
packages = find:
   

[options.entry_points]
console_scripts =
        timebox = timebox:__main__.main


[options.extras_require]
dev = pytest>=7.0; pre-commit>=2.0; jinja2